RESOLVED FIXED28077
[Qt] DumpRenderTree behaves incorrectly when generating test results
https://bugs.webkit.org/show_bug.cgi?id=28077
Summary [Qt] DumpRenderTree behaves incorrectly when generating test results
George Wright
Reported 2009-08-07 11:40:47 PDT
DumpRenderTree for the Qt port currently only dumps the PNG image data if an expected hash is provided on the commandline. When generating test results, the expected hash is not provided. The Mac port's behaviour differs in that it always dumps the PNG image data unless the expected hash and actual hash match.
Attachments
Fix for dumping PNGs in DRT (1.38 KB, patch)
2009-08-07 11:44 PDT, George Wright
eric: review-
Amended changelog (1.42 KB, patch)
2009-08-07 11:52 PDT, George Wright
manyoso: review+
George Wright
Comment 1 2009-08-07 11:44:13 PDT
Created attachment 34304 [details] Fix for dumping PNGs in DRT Proposed fix.
Eric Seidel (no email)
Comment 2 2009-08-07 11:47:25 PDT
Comment on attachment 34304 [details] Fix for dumping PNGs in DRT Specifically, not to dump the images if the hashes match. Please update the ChangeLog to be more clear. Otherwise the change looks great!
George Wright
Comment 3 2009-08-07 11:52:28 PDT
Created attachment 34308 [details] Amended changelog ChangeLog made more verbose
Adam Barth
Comment 4 2009-08-07 17:53:28 PDT
This patch appears to have already been landed.
Note You need to log in before you can comment on or make changes to this bug.