2009-08-07  George Wright  <george.wright@torchmobile.com>

Reviewed by Adam Treat.

        Fix DumpRenderTree for the Qt port to always dump the
        PNG data unless the expected and actual hashes match.

        https://bugs.webkit.org/show_bug.cgi?id=28077

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::dump):

Canonical link: https://commits.webkit.org/38508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46905 268f45cc-cd09-0410-ab3c-d52691b4dbfc